@@ -1229,12 +1229,12 @@ sub _add_errors {
   my $grp = PDL::Stats::Kmeans::iv_cluster \@grp;
 
   my $spdl = zeroes $subj->dim(0), keys(%grp_s) - $grp->dim(1);
-  my ($d0, $d1) = (0, 0);
+  my $d1 = 0;
   for my $g (0 .. $grp->dim(1)-1) {
-    my $gsub = $subj( which $grp( ,$g) )->effect_code;
+    my $col_inds = which $grp( ,$g);
+    my $gsub = $subj( $col_inds )->effect_code;
     my ($nobs, $nsub) = $gsub->dims;
-    $spdl($d0:$d0+$nobs-1, $d1:$d1+$nsub-1) .= $gsub;
-    $d0 += $nobs;
+    $spdl($col_inds, $d1:$d1+$nsub-1) .= $gsub;
     $d1 += $nsub;
   }
 
